@@ -26,7 +26,7 @@
  * @requires vm.gc.Z
  * @summary Test ZGC memory manager MXBean
  * @modules java.management
- * @run main/othervm -XX:+UseZGC -Xmx128M TestMemoryManagerMXBean
+ * @run main/othervm -XX:+UseBridgeGC -Xmx128M TestMemoryManagerMXBean
  */
 
 import java.lang.management.ManagementFactory;
